templates/stepzen/stepzen-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: Issuer
#    cert-manager.io/issuer: ${VAR_CERT_ISSUER}
    cert-manager.io/issuer-name: ${VAR_CERT_ISSUER}
    haproxy.router.openshift.io/balance: random
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 30s
    haproxy.router.openshift.io/timeout-tunnel: 5d
  name: stepzen-to-graph-server
  namespace: $VAR_APIC_GRAPHQL_NAMESPACE
spec:
  host: stepzen.apps.${VAR_CLUSTER_DOMAIN}
  port:
    targetPort: stepzen-graph-server
  tls:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: stepzen-graph-server
    weight: 200
  wildcardPolicy: None
